[REFACTOR] 페이징 전역 범위로 설정 후 그에 맞는 코드 수정